# userd

./: .gitignore  Cargo.toml  README.md  build.toml
ipc-userd/: Cargo.toml  expanded.rs
ipc-userd/src/: lib.rs  types.rs
src/: commands.rs  config.rs  lib.rs  main.rs  manager.rs  password.rs  types.rs  user.rs
