[package]
name = "userd"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.205", features = ["derive"] }
argon2 = "0.5.3"
ipc = { path = "../ipc" }
ipc-userd = { path = "ipc-userd" }

tl = { path = "../tl" }
logger = { path = "../logger" }
