[package]
name = "userd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
rand_core = { workspace = true }
argon2 = { workspace = true }
ipc-userd = { workspace = true }
rustix = { workspace = true, features = ["process"] }

tl = { workspace = true }
logger = { workspace = true }
ipc = { workspace = true }
ipc-serviced = { workspace = true }

[lints]
workspace = true
