[package]
name = "userd"
version = "0.1.0"
edition.workspace = true

[dependencies]
prelude.workspace = true
serviced.workspace = true
ipc.workspace = true
tl.workspace = true

# Serializing
serde.workspace = true

# OS APIs
rustix = { workspace = true, features = ["process"] }

# Encryption
argon2.workspace = true
rand_core.workspace = true

[lints]
workspace = true
